# sakura-blog-translate

./: .dockerignore  .gitignore  Dockerfile  README.md  constants.py  gcp_utils.py  html_processor.py  japan_translator.py  main.py  pyproject.toml  translate.txt
